--- a/notion.scss
+++ b/notion.scss
@@ -1,3 +1,7 @@
+.notion-page-content img {
+    border: 1px solid #212121;
+    border-radius: 6px !important;
+}
 .notion-topbar, 
 .notion-app-inner 
 > div 
