--- a/bookmarks.scss
+++ b/bookmarks.scss
@@ -3,52 +3,73 @@
   --bookmark-logo-size: 42px;
   --bookmark-dropzone-outline-width: 1px;
 }
+
 .grid {
   grid-auto-rows: 118px;
+  grid-gap: 12px;
 }
+
 .bookmark__wrap {
   height: 118px;
+  border-radius: 8px;
+  background-color: transparent;
+  border: 1px solid #333;
+  transition: 150ms;
 }
-.bookmark__dropzone {
-  display: none;
+
+#add {
+  background: transparent;
+  border: none;
 }
+
+.bookmark__dropzone {}
+
 .bookmark__title {
-  padding-left: 12px;
-  padding-right: 12px;
+  padding-left: 6px;
+  padding-right: 6px;
 }
+
 .bookmark__caption {
   z-index: 99999;
   letter-spacing: 1px;
   padding-left: 6px !important;
   line-height: 20px !important;
-  font-size: 12px !important;
+  font-size: 10px !important;
 }
+
 .bookmark__caption:after {
   display: none !important;
 }
+
 .bookmark--folder img {
   display: none !important;
 }
+
 .bookmark__action {
-  transition: 200ms;
+  transition: 150ms;
   margin-top: 6px;
   background-color: transparent;
 }
-.bookmark__action:hover {
-  transform: scale(0.9);
+
+.bookmark__wrap:hover {
+  /*transform: scale(0.96);*/
+  border: 1.5px solid #fff;
+  box-sizing: border-box;
 }
+
 .bookmark {
   transition: 100ms;
 }
+
 .bookmark--create {
   transition: 100ms;
 }
-.bookmark:hover, .bookmark--create:hover {
-  background-color: #333 !important;
+
+.bookmark:active,
+.bookmark--create:active {
+  transform: scale(0.92);
 }
-.bookmark:active, .bookmark--create:active {
-  transform: scale(0.96);
-}
+
 .bookmark__title {
   overflow: hidden;
   text-overflow: ellipsis;
@@ -58,12 +79,15 @@
   right: 0;
   bottom: 12px;
 }
+
 .bookmark__img--folder {
   background-size: 40%;
 }
+
 .bookmark--ghost {
   opacity: 0;
 }
+
 @media only screen and (max-width: 1400px) {
   .grid {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
